@@ -1,4 +1,13 @@
 <STRONG>Changes since 0.9.5</STRONG><BR><BR>
+Version <STRONG>0.9.5.0516</STRONG> includes the following changes:
+<UL>
+    <LI> Key mappings and Profiles are sorted alphabetically in the their settings window.</LI>
+    <LI> Fixed a bug when launches multiple-line urls.</LI>
+    <LI> Fixed a bug with selection that scrolls out of the view.</LI>
+    <LI> Fixed a toolbar menu bug (#1716916).</LI>
+    <LI> Tweaks of the full screen behavior.</LI>
+</UL>
+
 Version <STRONG>0.9.5.0315</STRONG> includes the following changes:
 <UL>
     <LI> Changing font size when in full screen mode now changes row/col numbers correctly (#1671723).</LI>
